--- a/instagram_clone/src/pages/styles/Home.module.scss
+++ b/instagram_clone/src/pages/styles/Home.module.scss
@@ -6,6 +6,11 @@
   margin-right: 3rem;
   width: 350px;
   margin-top: 3.5rem;
+
+  @media (max-width: 875px) {
+    margin-right: 0;
+    margin-top: 0;
+  }
 }
 
 .Home_Form_div {
@@ -15,6 +20,11 @@
   flex-direction: column;
   align-items: center;
   background-color: #fff;
+
+  @media (max-width: 875px) {
+    border: none;
+    background-color: #fafafa;
+  }
 }
 
 .Home_FacebookLink_Container {
@@ -48,6 +58,12 @@
   align-items: center;
   background-color: #fff;
 
+  @media (max-width: 875px) {
+    border: none;
+    background-color: #fafafa;
+    margin-top: 6rem;
+  }
+
   p {
     font-size: 1.35rem;
 
@@ -64,6 +80,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @media (max-width: 875px) {
+    margin-top: 3.5rem;
+  }
 
   p {
     font-size: 1.4rem;
